# ARSSM-Arma-Reforger-Simple-Server-Manager-GUI-

./: .gitignore  README.md
.cargo/: config.toml
backend/: Cargo.toml
backend/assets/: server.sample.json
backend/src/: config_gen.rs  defaults.rs  lib.rs  main.rs  models.rs  runner.rs  security.rs  storage.rs  workshop.rs
backend/src/forms/: mod.rs
backend/src/routes/: config.rs  dashboard.rs  health.rs  mod.rs  packages.rs  profiles.rs  run.rs  settings.rs  workshop.rs
backend/src/services/: mod.rs
backend/src/views/: dashboard.rs  health.rs  helpers.rs  layout.rs  mod.rs  packages.rs  profiles.rs  run.rs  settings.rs
backend/templates/layouts/: base.html
backend/templates/partials/: breadcrumbs.html  header_status.html  sidebar.html
backend/tests/: config_generator.rs  workshop_parser.rs
backend/tests/fixtures/: workshop_dep_5AAA.html  workshop_dep_5C97.html  workshop_multi.html  workshop_no_scenarios.html  workshop_root_with_deps.html  workshop_scenarios.html  workshop_scenarios_empty.html
docs/: installation.md  linux.md  windows.md
scripts/: reset-credentials.sh  setup-linux.sh
web/: index.html  styleguide.html
web/css/: theme.css
